test/error/ast/SetElemOutOfLongRange.mod
MODULE SetElemOutOfLongRange;
VAR s: LONGSET;
BEGIN
  s := {100};
END SetElemOutOfLongRange.
